--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -18,7 +18,7 @@
        -->
 <!--
                This file is generated automatically by ub0rlib/php.
-               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=arrays.xml to edit the file.
+               Visit http://ub0r.de/translate/travellog/de/arrays.xml to edit the file.
        -->
 <resources>
   <string-array name="round_">
