--- a/res/values-de/map.xml
+++ b/res/values-de/map.xml
@@ -18,7 +18,7 @@
        -->
 <!--
                This file is generated automatically by ub0rlib/php.
-               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=map.xml to edit the file.
+               Visit http://ub0r.de/translate/travellog/de/map.xml to edit the file.
        -->
 <resources>
   <string name="map_" formatted="false" username="flx &lt;f+translator@ub0r.de&gt;" orig="Map">Karte</string>
