--- a/res/values-de/preferences.xml
+++ b/res/values-de/preferences.xml
@@ -18,7 +18,7 @@
        -->
 <!--
                This file is generated automatically by ub0rlib/php.
-               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=preferences.xml to edit the file.
+               Visit http://ub0r.de/translate/travellog/de/preferences.xml to edit the file.
        -->
 <resources>
   <string name="faq_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="FAQ">FAQ</string>
