--- a/res/values/preferences.xml
+++ b/res/values/preferences.xml
@@ -25,8 +25,8 @@
 	<string name="feedback_hint">Report bugs, request features ...</string>
 	<string name="more_">More Apps..</string>
   <string name="about_">About TravelLog</string>
-	<string name="settings">Preferences</string>
-	<string name="settings_common">Preferences - Common</string>
+	<string name="settings">Settings</string>
+	<string name="settings_common">Common</string>
 	<string name="twitter_hint">Follow me on twitter.\nGet update notifications etc.</string>
 	<string name="author_">Author:</string>
 	<string name="version_">Version:</string>
