--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -18,7 +18,7 @@
 <resources>
 
     <string-array name="updates" translatable="false">
-        <item>HEAD: UI changes, remove ads</item>
+        <item>v2.5: UI changes, remove ads</item>
         <item>v2.3: minor fixes, UI fixes</item>
         <item>v2.2: major ui improvements, minor changes and fixes</item>
         <item>v2.1.2: update translations</item>
